--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+*.tfstate
+*.tfstate.*
+.terraform/
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraform.lock.hcl
 /.terraform/
 # Byte-compiled / optimized / DLL files
 __pycache__/
