--- a/.github/workflows/cd_batch.yml
+++ b/.github/workflows/cd_batch.yml
@@ -38,4 +38,4 @@ jobs:
         run: docker push us-central1-docker.pkg.dev/keiba-ai-487108/keiba-ai-repo/batch:latest
 
       - name: Update Cloud Run Service
-        run: gcloud beta run jobs update keiba-collector -image us-central1-docker.pkg.dev/keiba-ai-487108/keiba-ai-repo/batch:latest --region=us-central1
+        run: gcloud beta run jobs update keiba-collector --image=us-central1-docker.pkg.dev/keiba-ai-487108/keiba-ai-repo/batch:latest --region=us-central1
