--- a/app/keiba_ai/pyproject.toml
+++ b/app/keiba_ai/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "streamlit (>=1.54.0,<2.0.0)"
 ]
 
 [tool.poetry]
