--- a/app/keiba_collector/pyproject.toml
+++ b/app/keiba_collector/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "bs4 (>=0.0.2,<0.0.3)",
-    "requests (>=2.32.5,<3.0.0)"
+    "requests (>=2.32.5,<3.0.0)",
+    "google-cloud-bigquery (>=3.40.1,<4.0.0)"
 ]
 
 [tool.poetry]
