--- a/app/keiba_collector/pyproject.toml
+++ b/app/keiba_collector/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "bs4 (>=0.0.2,<0.0.3)",
     "requests (>=2.32.5,<3.0.0)",
-    "google-cloud-bigquery (>=3.40.1,<4.0.0)"
+    "google-cloud-bigquery (>=3.40.1,<4.0.0)",
+    "pandas (>=3.0.0,<4.0.0)"
 ]
 
 [tool.poetry]
