--- a/app/keiba_collector/pyproject.toml
+++ b/app/keiba_collector/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "bs4 (>=0.0.2,<0.0.3)",
     "requests (>=2.32.5,<3.0.0)",
     "google-cloud-bigquery (>=3.40.1,<4.0.0)",
-    "pandas (>=3.0.0,<4.0.0)"
+    "pandas (>=3.0.0,<4.0.0)",
+    "pyarrow (>=23.0.0,<24.0.0)"
 ]
 
 [tool.poetry]
