--- a/app/keiba_ai/pyproject.toml
+++ b/app/keiba_ai/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "streamlit (>=1.54.0,<2.0.0)"
+    "streamlit (>=1.54.0,<2.0.0)",
+    "google-cloud-run (>=0.15.0,<0.16.0)"
 ]
 
 [tool.poetry]
