--- a/app/keiba_ai/pyproject.toml
+++ b/app/keiba_ai/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "streamlit (>=1.54.0,<2.0.0)",
-    "google-cloud-run (>=0.15.0,<0.16.0)"
+    "google-cloud-run (>=0.15.0,<0.16.0)",
+    "bs4 (>=0.0.2,<0.0.3)"
 ]
 
 [tool.poetry]
