--- a/app/keiba_collector/pyproject.toml
+++ b/app/keiba_collector/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "google-cloud-bigquery (>=3.40.1,<4.0.0)",
     "pandas (>=3.0.0,<4.0.0)",
-    "pyarrow (>=23.0.0,<24.0.0)"
+    "pyarrow (>=23.0.0,<24.0.0)",
 ]
 
 [tool.poetry]
