--- a/app/keiba_science/pyproject.toml
+++ b/app/keiba_science/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "db-dtypes (>=1.5.0,<2.0.0)",
     "lightgbm (>=4.6.0,<5.0.0)",
     "scikit-learn (>=1.8.0,<2.0.0)",
-    "shap (>=0.50.0,<0.51.0)"
+    "shap (>=0.50.0,<0.51.0)",
+    "google-cloud-storage (>=3.9.0,<4.0.0)"
 ]
 
 [tool.poetry]
