--- a/app/keiba_ai/pyproject.toml
+++ b/app/keiba_ai/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.13"
 dependencies = [
     "streamlit (>=1.54.0,<2.0.0)",
     "google-cloud-run (>=0.15.0,<0.16.0)",
-    "bs4 (>=0.0.2,<0.0.3)"
+    "bs4 (>=0.0.2,<0.0.3)",
+    "playwright (>=1.58.0,<2.0.0)",
+    "google-cloud-storage (>=3.9.0,<4.0.0)",
+    "lightgbm (>=4.6.0,<5.0.0)"
 ]
 
 [tool.poetry]
