--- a/app/keiba_ai/Dockerfile
+++ b/app/keiba_ai/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /app
 
 COPY pyproject.toml poetry.lock README.md ./
 
-RUN python -m pip install --upgrade pip && \
+RUN apt-get update && apt-get install -y libgomp1 && \
+    python -m pip install --upgrade pip && \
     pip install poetry --no-cache-dir && \
     poetry config virtualenvs.create false && \
     poetry install --no-interaction --no-ansi --no-root && \
