--- a/app/keiba_ai/Dockerfile
+++ b/app/keiba_ai/Dockerfile
@@ -2,10 +2,14 @@ FROM python:3.14-slim
 
 WORKDIR /app
 
+# システム依存関係のインストール (libgomp1 に加え、playwrightの依存関係を追加)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY pyproject.toml poetry.lock README.md ./
 
-RUN apt-get update && apt-get install -y libgomp1 && \
-    python -m pip install --upgrade pip && \
+RUN python -m pip install --upgrade pip && \
     pip install poetry --no-cache-dir && \
     poetry config virtualenvs.create false && \
     poetry install --no-interaction --no-ansi --no-root && \
@@ -15,7 +19,12 @@ COPY src /app/src
 
 RUN poetry install --no-interaction --no-ansi
 
-RUN poetry run playwright install
+# --- ここを修正 ---
+# ブラウザ本体のインストール
+RUN poetry run playwright install chromium
+# ブラウザの実行に必要なOSライブラリをインストール（root権限で実行される）
+RUN poetry run playwright install-deps chromium
+# ------------------
 
 EXPOSE 8501
 
